--- a/css/links.css
+++ b/css/links.css
@@ -57,6 +57,7 @@
     *background: url(../img/links-phone.jpg);
     *background-size: cover;
     *background-repeat: no-repeat;
+    *background-position: center;
     
   }
 }
