--- a/css/links.css
+++ b/css/links.css
@@ -30,7 +30,7 @@
 }
 
 .img-top, .rounde-circle {
-  border: solid 1px #fff;
+  border: solid 2px #ffdf2d;
   border-radius: 50%; 
 }
 
@@ -54,6 +54,7 @@
 
 @media (max-width: 576px) {
   .call-to-acction {
+    height: 100%;
     *background: url(../img/links-phone.jpg);
     *background-size: cover;
     *background-repeat: no-repeat;
